# oss-repo-template

./: bio.md  index.md
labs/lab-01/: report.md
labs/lab-03/: Lab3.md
labs/lab-03/resources/outputpath/: activity.html  authors.html  commits_by_author.plot  files.html  gitstats.cache  index.html  lines.html  lines_of_code_by_author.plot  tags.html
labs/lab-04/: lab4.md
labs/lab-05/: lab5.md
labs/lab-05/Lab-Example/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  dynamic_block  static_block
labs/lab-05/Tutorial/Step1/: CMakeCache.txt  CMakeLists.txt  Makefile  Tutorial  cmake_install.cmake  tutorial.cxx
labs/lab-05/Tutorial/Step2/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
labs/lab-05/Tutorial/Step2/MathFunctions/: Makefile  cmake_install.cmake
labs/lab-05/Tutorial/Step3/: CMakeCache.txt  Makefile  Tutorial  cmake_install.cmake
labs/lab-05/Tutorial/Step3/MathFunctions/: Makefile  cmake_install.cmake
labs/lab-05/Tutorial/Step4/: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
labs/lab-05/Tutorial/Step4/MathFunctions/: CMakeLists.txt  Makefile  cmake_install.cmake
labs/lab-05/Tutorial/Step5/: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  Tutorial  TutorialConfig.h  cmake_install.cmake
labs/lab-05/Tutorial/Step5/MathFunctions/: CMakeLists.txt  Makefile  cmake_install.cmake
labs/lab-06/: lab06.md
labs/lab-07/: lab07-4.py  lab07.md  lab07.py  lab7.txt
labs/lab-08/: lab8.md
labs/lab-08/images/: 11,png
(+1 files in other folders)
